# openclaw-mission-control

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pnpm-workspace.yaml  start.sh  turbo.json
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: agents.rs  auth.rs  health.rs  mod.rs  notifications.rs  team.rs  webhooks.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/db/: agents.rs  mod.rs  schema.rs  users.rs  workspace.rs
backend/src/models/: agent.rs  mod.rs  user.rs
backend/src/ssh/: client.rs  commands.rs
backend/src/ws/: logs.rs
docs/: api-reference.md  clawdesk-space.md  deployment.md  getting-started.md  railway.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/agents/: AddAgentModal.tsx  AgentCard.tsx
frontend/src/components/auth/: AuthLayout.tsx  OAuthButtons.tsx
frontend/src/components/dashboard/: ActivityFeed.tsx  AgentTable.tsx  AlertBanner.tsx  FleetChart.tsx  MetricCard.tsx  StatsRow.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Landing.tsx
frontend/src/store/: auth.ts
frontend/src/types/: index.ts
infra/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
infra/terraform/: main.tf
migrations/: 001_init.sql  002_webhooks.sql  003_teams.sql
scripts/: deploy.sh  migrate.sh  seed.sh
sdk/: package.json
sdk/src/: index.ts
tests/e2e/: smoke.test.ts
(+38 files in other folders)
