[package]
name = "openclaw-mission-control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openclaw-mission-control"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
futures = "0.3"
tokio-tungstenite = "0.21"
rand = "0.8"
tempfile = "3"
